fixes text wrapping problems on title

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -207,6 +207,9 @@ h6 {
       max-height:80vh;
       width:auto;
     }
+    .quote-title {
+      font-size: 1.8em !important;
+    }
 }
 
 .bottom-nav-div, .show-mobile {
@@ -339,4 +342,8 @@ h6 {
 
 .form-partials {
   display:none;
+}
+
+.quote-title {
+  overflow-wrap: break-word;
 }
